diesel_compile_tests/tests/fail/derive/bad_derive_input.stderr
error: This derive can only be used on non-unit structs
  --> tests/fail/derive/bad_derive_input.rs:12:10
   |
12 | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `AsChangeset` (in Nightly builds, run with -Z macro-backtrace for more info)

error: This derive can only be used on non-unit structs
  --> tests/fail/derive/bad_derive_input.rs:16:10
   |
16 | #[derive(AsChangeset)]
   |          ^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `AsChangeset` (in Nightly builds, run with -Z macro-backtrace for more info)
